Google Analytics 4導入：環境変数設定・計測スクリプト追加・Turbo対応・CSP許可設定を実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
     <%= csp_meta_tag %>
     <%= yield :head %>
 
+    <%# ===== Google Analytics ===== %>
+    <%= render "shared/google_analytics" %>
+
     <%# ===== アイコン & PWA ===== %>
     <%= favicon_link_tag 'favicon.ico', rel: 'icon', type: 'image/x-icon' %>
     <link rel="manifest" href="/manifest.json">
