--- a/app/views/shared/_modal_panel.html.erb
+++ b/app/views/shared/_modal_panel.html.erb
@@ -77,6 +77,12 @@
           <li><%= link_to "プライバシーポリシー", privacy_path, class: "block py-3 text-center hover:text-[#CC0000]" %></li>
         </ul>
 
+        <% if current_user&.admin? %>
+          <ul class="mt-2 border-b-2 border-[#CC0000] divide-y-2 divide-[#CC0000]">
+            <li><%= link_to "管理画面", admin_root_path, class: "block py-3 text-center hover:text-[#CC0000]" %></li>
+          </ul>
+        <% end %>
+
         <ul class="mt-2 border-b-2 border-[#CC0000] divide-y-2 divide-[#CC0000]">
           <li><%= link_to "ログアウト", session_path,
                 data: { turbo_method: :delete, turbo_confirm: "ログアウトしますか？" },
