--- a/app/views/likes/create.turbo_stream.erb
+++ b/app/views/likes/create.turbo_stream.erb
@@ -1,9 +1,9 @@
-<!-- app/views/likes/destroy.turbo_stream.erb -->
+<!-- app/views/likes/create.turbo_stream.erb -->
 <%= turbo_stream.replace dom_id(@pre_code, :actions) do %>
   <%= render "code_libraries/actions",
       pre_code: @pre_code,
-      current_like:      (logged_in? ? @pre_code.likes.find_by(user_id: current_user.id)       : nil),
-      current_bookmark:  (logged_in? ? @pre_code.bookmarks.find_by(user_id: current_user.id)   : nil) %>
+      current_like:      (logged_in? ? @pre_code.likes.find_by(user_id: current_user.id)      : nil),
+      current_bookmark:  (logged_in? ? @pre_code.bookmarks.find_by(user_id: current_user.id)  : nil) %>
 <% end %>
 
 <%= turbo_stream.replace dom_id(@pre_code, :metrics) do %>
