--- a/app/views/likes/destroy.turbo_stream.erb
+++ b/app/views/likes/destroy.turbo_stream.erb
@@ -2,7 +2,8 @@
 <%= turbo_stream.replace dom_id(@pre_code, :actions) do %>
   <%= render "code_libraries/actions",
         pre_code: @pre_code,
-        current_like: current_user.likes.find_by(pre_code_id: @pre_code.id) %>
+        current_like: (logged_in? ? @pre_code.likes.find_by(user_id: current_user.id) : nil),
+        current_bookmark: (logged_in? ? @pre_code.bookmarks.find_by(user_id: current_user.id) : nil) %>
 <% end %>
 
 <%= turbo_stream.replace dom_id(@pre_code, :metrics) do %>
