--- a/app/views/book_sections/show.html.erb
+++ b/app/views/book_sections/show.html.erb
@@ -22,7 +22,7 @@
 
   <!-- ★ ここがハイライト対象（content-body） -->
   <article class="content-body prose break-all md:break-words">
-    <%= rich_html(@section.content) %>
+    <%= render_section_content(@section) %>
   </article>
 
   <!-- ===== シェア & クイズ遷移ボタン ===== -->
